# nomad-schema-plugin-simulation-workflow

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: actions.yaml  mkdocs-deploy.yml  publish.yml
docs/: index.md
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
reference/: references.html
search/: search_index.json
simulationworkflowschema/: __init__.py  chemical_reaction.py  dmft.py  elastic.py  equation_of_state.py  general.py  geometry_optimization.py  gw.py  max_ent.py  molecular_dynamics.py  nmr.py  nmr_magres.py  nomad_plugin.yaml  phonon.py  photon_polarization.py  single_point.py  tb.py  thermodynamics.py  xs.py
tests/: conftest.py  test_simulationworkflowschema.py
tests/data/: elastic.archive.json  geometry_optimization.archive.json  no_workflow.archive.json  phonon.archive.json  radius_of_gyration.archive.json  rdf_2.archive.json
tests/data/chemical_reaction/N/: run.archive.json
tests/data/chemical_reaction/NPdAg/: run.archive.json
tests/data/chemical_reaction/PdAg/: run.archive.json
tests/data/chemical_reaction/RhCu/: run.archive.json
tests/data/chemical_reaction/RhCu_CH3/: run.archive.json
tests/data/chemical_reaction/RhCu_CH3_H/: run.archive.json
tests/data/chemical_reaction/RhCu_CH4/: run.archive.json
tests/data/chemical_reaction/RhCu_xHfcc/: run.archive.json
tutorial/: tutorial.html
